Client/src/styles/style.css
*, *::after, *::before {
  box-sizing: border-box;
}

h2 {
  font-family:Arial, Helvetica, sans-serif;
  font-size: 3vw;
  margin: 3vw;
}



/* ================================
Related Product */

.related,
.outfit {
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  max-width: 70%;
  margin: auto;
}

.section-title {
  position: relative;
  top: 0;
  padding: 0 7vw;
  font-size: 1.2vw;
  margin: 1vw auto;
  width: 70%;
  justify-content: center;
  text-transform: uppercase;
}

.outfit-list,
.related-products {
  width: 80%;
  display: flex;
  transition: transform 250ms ease-in-out
}

.outfit-list::-webkit-scrollbar,
.related-products::-webkit-scrollbar {
  display: none;
}

.pre-button,
.next-button {
  border: none;
  position: absolute;
  width: 10%;
  top: 1%;
  height: 98%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 9;
  font-size: 2vw;
}

.pre-button {
  left: 0;
  transform: rotate(180deg);
}

.next-button {
  right: 0;
}

.pre-button:hover,
.next-button:hover {
  font-size: 4vw;
}

.card {
  flex: 0 0 24%;
  max-width: 24%;
  aspect-ratio: 5 / 8;
  margin: .5%;
  border: 1px solid;
}

.card-img {
  position: relative;
  width: 100%;
  height: 70%;
}

.card-current-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.card-function-btn {
  position: absolute;
  top: 3%;
  right: 5%;
  width: 14%;
  height: 10%;
  background: none;
  transition: 0.5s;
  cursor: pointer;
  opacity: 0;
  border: none;
  outline: none;
  font-size: 1.5vw;
  color: white;
}

.card-img:hover .card-function-btn {
  opacity: 1;
}

.card-function-btn:hover {
  color: black;
}

#compare-overlay {
  position: fixed;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: all;
  z-index: 20;
}

.compare-modal {
  opacity: 1;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-30%, -50%);
  border: 1px solid;
  z-index: 30;
  background-color: white;
  width: 800px;
  max-width: 60%;
  padding: .5vw;
}

.compare-title {
  position: relative;
  top: 0;
  width: 100%;
  text-transform: capitalize;
  margin: 0.25vw;
}

.compare-features {
  position: relative;
  width: 100%;
  margin: 0.25vw;
}

.compare-title {
  text-align: left;
  padding-left: .25vw;
}

.compare-features {
  max-height: 30vh;
}

.compare-roll {
  position: relative;
  width: 100%;
}

.compare-current {
  text-align: left;
}

.feature-name {
  text-align: center;
}

.compare-compare {
  text-align: right;
}

.card-info {
  width: 100%;
  height: 30%;
}

.card-category {
  font-family: Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  margin: 2%;
  font-size: 1vw;
  height: 14%;
}

.card-name {
  font-weight: bold;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  margin: 2%;
  font-size: 1.25vw;
  height: 36%;
}

.card-price {
  margin: 2%;
  height: 14%;
}

.current-price {
  font-size: 1vw;
  color: black;
  margin: 0 2%;
}

.sale-price {
  font-size: 1vw;
  color: red;
  margin: 0 2%;
}

.original-price {
  font-size: 1vw;
  text-decoration: line-through;
  color: black;
  margin: 0 2%;
}

.card-star-rating {
  margin: 2%;
  height: 18%;
}

.star-rating {
  height: 100%;
}

.single-star-container {
  height: 100%;
  aspect-ratio: 8 / 9;
  display: inline-block;
}

.single-star-outline {
  height: 100%;
  aspect-ratio: 8 / 9;
}

.single-star-fill {
  height: 100%;
  background-color: gold;
  object-fit: cover;
  display: flex;
}

.review-count {
  display: inline-block;
  height: 100%;
  font-size: 1vw;
  margin: 2%;
}

.add-outfit-sign {
  font-size: 10vw;
  font-weight: bold;
  text-align: center;
}

.add-outfit-word {
  font-size: 1vw;
  text-align: center;
  margin: 2%;
}

.card-compare-modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid black;
  width: 500px;
  max-width: 80%;
  height: 400px;
  max-height: 80%;
  z-index: 10;
  background-color: white;
  overflow-y: scroll;
}


/* ================================
Reviews */
.reviewTitle{
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 20px;
}
.containerAll {
  margin-top: 3vw;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}

.breakdownAll{
  text-align: left;
}
.containerBreakdown {
  font-size: 50px;
  font-weight: bold;
}

.starflex{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-content: flex-end;
}

.starReview{
  padding-left: 0;
  display: flex;
  flex-direction: column;
  margin: 0;
  text-align: left;
  list-style-type: none;
}

.starBar{
  background-color: white;
  display: flex;
  flex-direction: row;
  align-items: center;
  color: #222;
  padding: 0.01em;
  border: none;
  outline: none;
  position: relative;
  cursor: pointer;
}

.starBar::before{
  content:'';
  /* margin: 0; */
  position: absolute;
  height: 50px;
  top: 0;
  left:0;
  right:0;
  bottom:0;
  z-index: -1;
  border: 2px solid rgb(240, 138, 94);
  transition: top, left, right, bottom, 100ms ease-in-out;
}

.starBar:hover::before,
.starBar:focus::before {
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  z-index: 1;
}

.star{
  /* top:4px; */
  line-height: 2.5;
  text-align: left;
  position: relative;
}


.progress-bar{
  /* position: relative; */
  border: none;
  position: relative;
  height: 0.5em;
  width: 200px;
  background: rgb(174, 171, 171);
  color: rgb(244, 244, 242);
  cursor: pointer;
}

.progress-bar.five::before {
  content: '';
  display: flex;
  position: absolute;
  height: .5em;
  left: 0;
  top: 00;
  bottom: 0;
  width: var(--star5-color);
  min-width: 0;
  max-width: 100%;
  background-color: rgb(54, 162, 54);
}
/* ... */

